# proxy-view

./: .gitignore  MANIFEST.in  README.md  TODOS.md  pyproject.toml
.github/workflows/: publish.yml
.pi-lens/: change-log.jsonl  turn-state.json
.pi-lens/cache/: code-quality-warnings.json  code-quality-warnings.meta.json  knip.meta.json  review-graph.json  turn-end-findings-last.json  turn-end-findings-last.meta.json  turn-end-findings.meta.json
dashboard/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
dashboard/src/: App.css  App.test.tsx  App.tsx  index.css  types.ts
dashboard/src/components/: BodyTab.css  BodyTab.tsx  DetailPanel.css  DetailPanel.test.tsx  DetailPanel.tsx  HeadersTab.css  HeadersTab.tsx  RequestList.css  RequestList.test.tsx  RequestList.tsx  RequestRow.css  RequestRow.tsx  StatusBar.css  StatusBar.tsx  TimingTab.css  TimingTab.tsx  WaterfallChart.css  WaterfallChart.tsx  WelcomeScreen.css  WelcomeScreen.test.tsx  WelcomeScreen.tsx
dashboard/src/hooks/: useRequests.test.ts  useRequests.ts  useWebSocket.test.ts  useWebSocket.ts
dashboard/src/utils/: formatters.test.ts  formatters.ts
docs/superpowers/plans/: 2026-05-30-react-dashboard.md
src/proxai/: __init__.py  cli.py  config.py  models.py  proxy.py  server.py  storage.py  ws.py
src/proxy_view/: __init__.py  cli.py  config.py  models.py  proxy.py  server.py  storage.py  ws.py
tests/: test_integration.py  test_models.py  test_proxy.py  test_server.py  test_smoke.py  test_storage.py  test_ws.py
(+3 files in other folders)
