[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxai"
version = "0.1.0"
description = "A CLI-first API debugging proxy with real-time WebSocket streaming"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Proxai Contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Debuggers",
]
keywords = ["proxy", "debugging", "api", "developer-tools", "websocket"]

dependencies = [
  "typer>=0.12",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "httpx>=0.28",
  "rich>=13.9",
  "websockets>=14.0",
  "aiosqlite>=0.20",
  "pydantic>=2.10",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "httpx>=0.28",
  "websockets>=14.0",
  "aiosqlite>=0.20",
]

[project.scripts]
proxai = "proxai.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["proxai"]
